[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "synced-memory"
dynamic = ["version"]
description = "A Python abstraction layer that makes Redis or DragonflyDB behave like a shared Python object across processes/microservices."
readme = "README.md"
authors = [
    { name = "Sinan Ozel", email = "coding@sinan.slmail.me" },
]
license = { file = "LICENSE" }
dependencies = [
    "redis>=4.0"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",          # For running tests
    "pytest-cov>=3.0.0",      # For test coverage reporting
    "pytest-depends>=1.0.1",  # For test dependency management
    "pytest-mock>=3.14.0",    # For mocking in tests
    "httpx>=0.28.1",          # To make more complex calls, such as streaming.
]

dev = [
    "ruff>=0.12.11",          # For linting
    "isort>=5.0.0",           # For moving and sorting imports
    "black>=24.0.0",          # For code formatting (Black)
    "docformatter>=1.7.5",    # For formatting docstrings
    "mike",
]

docs = [
    "mkdocs-material>=9.0.0", # Material theme for MkDocs
    "mkdocstrings[python]>=0.24.0",  # API documentation from docstrings
    "mike",                    # Versioned docs deployment
]

publish = [
    "packaging>=25.0",
]

[tool.isort]
profile = "black"

[tool.ruff.lint]
select = ["I", "F", "E", "W"]
ignore = ["E501"]


[tool.ruff.lint.per-file-ignores]
"**/test_*.py" = ["RUF001"]

[tool.black]
line-length = 80
target-version = ['py311']

[tool.docformatter]
wrap-summaries = 79
wrap-descriptions = 79
in-place = true
recursive = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
version = { attr = "synced_memory.__version__" }

[project.urls]
Homepage = "https://github.com/sinan-ozel/synced-memory"
Issues = "https://github.com/sinan-ozel/synced-memory/issues"
